fixing indexation (doc)